--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -27,12 +27,12 @@ jobs:
       - name: Create comment with api
         run: |
          gh api -X POST \
-          http://api.github.com/repo/${ORGANISATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
+          http://api.github.com/repos/{OWNER}/{REPOSITORY}/issues/{ISSUE_NUMBER}/comments \
           -f body='
           Comment but from the API call not action
           '
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ORGANISATION: ${{ github.event.organization.login }}
+          OWNER: ${{ github.repository_owner }}
           REPOSITORY: ${{ github.event.repository.name }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
