add correct url

--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -25,8 +25,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check API URL
-        run: echo "http://api.github.com/repos/YacqubAdan/{REPOSITORY}/issues/{ISSUE_NUMBER}/comments"
-        
+        run: echo "http://api.github.com/repos/YacqubAdan/${{ github.event.repository.name }}/issues/${{ github.event.issue.number }}/comments"
+
       - name: Create comment with api
         run: |
          gh api -X POST \
