--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Create comment with api
         run: |
          gh api -X POST \
-          https://api.github.com/repos/YacqubAdan/{REPOSITORY}/issues/{ISSUE_NUMBER}/comments \
+          https://api.github.com/repos/YacqubAdan/${{ github.event.repository.name }}/issues/${{ github.event.issue.number }}/comments \
           -f body='
           Comment but from the API call not action
           '
